<resources>
    <string name="app_name">Wetterkleidung</string>
    <string name="error_no_internet_connection">no internet connection!!</string>
    <string name="tomorrow">morning</string>
    <string name="add_city">Add City</string>
    <string name="insert_city">Insert City Name Here</string>
    <string name="set_default_city">default</string>
    <string name="city_input_title">city :</string>
    <string name="city_not_selected_note">You Must Insert City Name Or \n Select World Button </string>
    <string name="loading_weather_data_for">loading weather data for</string>
    <string name="city_setting">City Setting</string>
    <string name="weather_unit">Weather Unit :</string>
    <string name="times">Times :</string>
    <string name="advance_app">Advance App</string>
    <string name="set_time_periods">set time periods</string>
    <string name="add_or_remove_cities">add or remove cities</string>
    <string name="exit_app">Exit App</string>
    <string name="set_celsius">Celsius Set</string>
    <string name="set_fahrenheit">Fahrenheit set</string>
    <string name="accept">Accept</string>
    <string name="cancel">cancel</string>

    <string name="err_city_name_incorrect">City name is incorrect</string>
    <string name="err_city_already_exist">City is already exist</string>
</resources>
