<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment"
    android:background="@drawable/gradient_backtop_backbottom"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/imgCity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/clCity"
            app:layout_constraintLeft_toLeftOf="@id/clCity"
            android:src="@drawable/location"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@id/clCity"
            app:layout_constraintLeft_toRightOf="@id/imgCity"
            android:text="@string/city_setting"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imgCityRight"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/clCity"
            app:layout_constraintRight_toRightOf="@id/clCity"
            android:src="@drawable/right"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/imgCityRight"
            android:text="@string/add_or_remove_cities"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/clCity"
        android:background="@color/dark_green"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUnit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/div1">

        <ImageView
            android:id="@+id/imgUnit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/temp"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgUnit"
            android:text="@string/unit"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/clUnit"
            app:layout_constraintBottom_toBottomOf="@id/clUnit"
            app:layout_constraintRight_toRightOf="@id/clUnit"
            android:orientation="horizontal"
            android:layout_marginRight="8dp">

            <RadioButton
                android:id="@+id/radioUnitC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:textSize="16sp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:ellipsize="middle"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioUnitF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="F"
                android:textSize="16sp"
                android:ellipsize="marquee"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/div2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/clUnit"
        android:background="@color/dark_green"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTimes"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/div2">

        <ImageView
            android:id="@+id/imgTime"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/time"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgTime"
            android:text="@string/times"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imgTimesRight"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@id/clTimes"
            app:layout_constraintRight_toRightOf="@id/clTimes"
            android:src="@drawable/right"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgTimesRight"
            android:text="@string/set_time_periods"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/div3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/clTimes"
        android:background="@color/dark_green"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAdvance"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/div3">

        <ImageView
            android:id="@+id/imgAdvance"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/advance"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgAdvance"
            android:text="@string/advance_app"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/switchAdvance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text=""
            app:layout_constraintRight_toRightOf="@id/clAdvance"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/div4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/clAdvance"
        android:background="@color/dark_green"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clExit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/div4">

        <ImageView
            android:id="@+id/imgExit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/exit"
            android:tint="@color/dark_green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgExit"
            android:text="@string/exit_app"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>